# robot-vision-sim

./: INFORME_VISION.md  diff_drive.sdf
config/: robot.rviz
install/: local_setup.sh  setup.sh
install/sim_vision_test/lib/sim_vision_test/: vision_sim_node
install/sim_vision_test/share/sim_vision_test/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: robot_camera.launch.py
log/: latest_build
src/sim_vision_test/: package.xml  setup.cfg  setup.py
src/sim_vision_test/resource/: sim_vision_test
src/sim_vision_test/sim_vision_test/: vision_sim_node.py
urdf/: my_robot.urdf
worlds/: camera_world.sdf  racetrack.sdf  racetrack_decorated.sdf
